@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-04T00:33:31Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 8,
+  "timestamp" : "2022-04-04T16:09:50Z",
+  "count" : 1,
+  "count_minmax" : [ 0, 1 ],
+  "count_prev_day_inc" : 9,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
