@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-04T00:33:31Z",
+  "timestamp" : "2022-04-04T16:09:50Z",
   "count_outdated" : 547,
   "uniques_outdated" : 36,
-  "count" : 907,
-  "uniques" : 49,
+  "count" : 908,
+  "uniques" : 50,
   "views" : [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 9,
       "count_minmax": [ 0, 9 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
