@@ -1,5 +1,5 @@
 {
-  "count": 360,
+  "count": 361,
   "uniques": 2,
   "views": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 9,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-04T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
