@@ -1,3 +1,9 @@
+2022-04-04T16:09:50Z:
+* notice: last 14d: all unq: 361 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 547 36 / 907 49
+* notice: next accum: outdated-all outdated-unq / all unq: 547 36 / 908 50
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +9 / -0 -0
+
 2022-04-04T00:33:31Z:
 * notice: last 14d: all unq: 360 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 899 49
